# login-cryengine-sdk

./: .gitignore  README.md  XsollaLogin.cryproject
Assets/Libs/UI/: ConvertSWFtoGFX.bat  UI_AuthPage.fla  UI_AuthPage.gfx  UI_AuthPage.swf  UI_AuthPage_I10.dds  UI_AuthPage_I11.dds  UI_AuthPage_I13.dds  UI_AuthPage_I14.dds  UI_AuthPage_I1D.dds  UI_AuthPage_I21.dds  UI_AuthPage_I25.dds  UI_AuthPage_I29.dds  UI_AuthPage_I3.dds  UI_AuthPage_I30.dds  UI_AuthPage_I35.dds  UI_AuthPage_I36.dds  UI_AuthPage_I3A.dds  UI_AuthPage_I3D.dds  UI_AuthPage_I42.dds  UI_AuthPage_I45.dds  UI_AuthPage_I8.dds  UI_AuthPage_IA.dds  UI_AuthPage_IB.dds  UI_AuthPage_ID.dds  UI_AuthPage_IE.dds
Assets/Libs/UI/ActionScript/: Callbacks.as  LoginPage.as  RecoverPage.as  RegisterPage.as  Switcher.as
Assets/Libs/UI/UIActions/: xsolla_login.xml
Assets/Libs/UI/UIElements/: XsollaLoginUI.xml
Code/: CMakeLists.txt  CVars.cpp  CVars.h  FlowNodes.cpp  Plugin.cpp  Plugin.h  StdAfx.cpp  StdAfx.h  Worker.cpp  Worker.h
Interface/Xsolla/Login/: IXsollaLoginSDK.h
